# hair-gs

./: .gitignore  README copy.md  README.md  environment.yml  environment_win.yml  eval.py  index.html  merge.py  pyproject.toml  render.py  run_full_pipeline_single.sh  train.py
arguments/: __init__.py
c_utils/: c_utils.pyx  setup.py
data/: __init__.py  colmap.py  cy_hair.py  dataset_readers.py  eval_data.py  hair_data.py  head_data.py  head_reconstruction_data.py
gaussian_renderer/: __init__.py
loss/: __init__.py  losses.py  metrics.py
scene/: OpenGLRenderer.py  __init__.py  cameras.py  flame.py  gaussian_model.py  hair_gaussian_model.py
scripts/: convert_output.py  download_parse_cy.py  parse_nersemble.py  parse_usc_hairsalon.py
submodules/diff-gaussian-rasterization/: CMakeLists.txt  setup.py
submodules/diff-gaussian-rasterization/cuda_rasterizer/: backward_distwar.cu  rasterizer_impl.h
submodules/simple-knn/: simple_knn.cu
utils/: __init__.py  camera.py  general.py  logging.py  system.py  transform.py  vision.py  visualization.py
